implemented responsive design

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="description" content="Welcome to the most extraordinary hotel in Boston Massachusetts">
   <meta name="keywords" content="hotel, boston hotel, new england hotel">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" media="screen and (max-width: 768px)" href="css/mobile.css">
   <link href="..\fontawesome\css\all.css" rel="stylesheet"> <!--load all styles -->
   <title>Hotel BT | Welcome</title>
 </head>
@@ -27,7 +28,7 @@
       <div class="container">
         <div class="showcase-content">
           <h1><span class="text-primary">Enjoy</span> Your Stay</h1>
-          <p class="lead">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium distinctio ut asperiores quia neque illo atque molestiae officia provident tenetur voluptatum dicta alias aliquam id doloremque eligendi, iure maxime rerum vero temporibus. Deleniti consequatur atque omnis officiis, voluptatem impedit eaque dolor animi dolores ad totam maiores exercitationem aliquam quibusdam. Ut?</p>
+          <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, quae blanditiis et eum nemo impedit amet excepturi aliquid maxime labore.</p>
           <a class="btn" href="about.html">About Our Hotel</a>
         </div>
       </div>
